add ghcr secrets to default charts

--- a/charts/telematics/values.yaml
+++ b/charts/telematics/values.yaml
@@ -5,6 +5,8 @@
 fullnameOverride: telematics
 replicaCount: 1
 
+imagePullSecrets:
+  - name: ghcr-battregistry-credentials
 image:
   repository: "battregistry.azurecr.io/be.battmobiel.telematics"
   tag: "latest" # this is unused in the CI Pipeline, see README.md
