--- a/charts/chat/values.yaml
+++ b/charts/chat/values.yaml
@@ -5,6 +5,8 @@
 fullnameOverride: chat
 replicaCount: 1
 
+imagePullSecrets:
+  - name: ghcr-battregistry-credentials
 image:
   repository: "battregistry.azurecr.io/be.battmobiel.chat"
   tag: "latest" # this is unused in the CI Pipeline, see README.md
