--- a/charts/web-bff/values.yaml
+++ b/charts/web-bff/values.yaml
@@ -5,6 +5,8 @@
 fullnameOverride: web-bff
 replicaCount: 1
 
+imagePullSecrets:
+  - name: ghcr-battregistry-credentials
 image:
   repository: "battregistry.azurecr.io/be.battmobiel.web-bff"
   tag: "latest" # this is unused in the CI Pipeline, see README.md
